fixed cart alignment to center and fixed width

--- a/unishop/src/app/modules/user/my-cart/my-cart.component.scss
+++ b/unishop/src/app/modules/user/my-cart/my-cart.component.scss
@@ -13,6 +13,10 @@
     font-size: 15px;
     margin-bottom: 70px ;
     padding: 30px;
+    margin-right: auto;
+    margin-left: auto;
+    width: 1000px;
+    text-align: center;
 
     @include breakpoint-max(xs) {
       display: none;
